--- a/you-say!/you-say!/Storyboards/NewQuestion.storyboard
+++ b/you-say!/you-say!/Storyboards/NewQuestion.storyboard
@@ -23,7 +23,7 @@
                                 <color key="backgroundColor" red="0.88294178249999999" green="0.85104399919999996" blue="0.84313982730000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </view>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" rotateEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hdx-4G-mhq">
-                                <rect key="frame" x="0.0" y="44" width="414" height="703"/>
+                                <rect key="frame" x="0.0" y="52" width="414" height="695"/>
                             </mapView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwp-9g-8BL">
                                 <rect key="frame" x="344" y="685" width="50" height="50"/>
@@ -62,16 +62,16 @@
                         </subviews>
                         <color key="backgroundColor" red="0.8822752833366394" green="0.88629978895187378" blue="0.88235598802566528" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="hdx-4G-mhq" firstAttribute="top" secondItem="i36-Gn-2cd" secondAttribute="top" id="1Dc-iC-gFb"/>
                             <constraint firstItem="pts-4d-2Ez" firstAttribute="top" secondItem="gwp-9g-8BL" secondAttribute="bottom" constant="20" id="2ya-qh-8AE"/>
                             <constraint firstItem="i36-Gn-2cd" firstAttribute="trailing" secondItem="gwp-9g-8BL" secondAttribute="trailing" constant="20" id="9bl-ss-D1Q"/>
                             <constraint firstAttribute="trailing" secondItem="8oD-Gv-w3I" secondAttribute="trailing" id="GDU-Yd-b28"/>
-                            <constraint firstItem="hdx-4G-mhq" firstAttribute="top" secondItem="8oD-Gv-w3I" secondAttribute="bottom" id="PDa-dq-vf2"/>
                             <constraint firstItem="hdx-4G-mhq" firstAttribute="leading" secondItem="i36-Gn-2cd" secondAttribute="leading" id="QhX-4o-QSQ"/>
                             <constraint firstItem="pts-4d-2Ez" firstAttribute="leading" secondItem="i36-Gn-2cd" secondAttribute="leading" constant="16" id="TCE-aa-e1z"/>
                             <constraint firstItem="i36-Gn-2cd" firstAttribute="bottom" secondItem="pts-4d-2Ez" secondAttribute="bottom" constant="8" id="W9z-nC-D3Z"/>
                             <constraint firstItem="pts-4d-2Ez" firstAttribute="top" secondItem="hdx-4G-mhq" secondAttribute="bottom" constant="8" id="WvZ-0f-dtu"/>
+                            <constraint firstItem="hdx-4G-mhq" firstAttribute="top" secondItem="i36-Gn-2cd" secondAttribute="top" constant="8" id="YQY-Dr-cFz"/>
                             <constraint firstItem="hdx-4G-mhq" firstAttribute="trailing" secondItem="i36-Gn-2cd" secondAttribute="trailing" id="ZDc-hP-s4m"/>
+                            <constraint firstItem="hdx-4G-mhq" firstAttribute="top" secondItem="8oD-Gv-w3I" secondAttribute="bottom" constant="8" id="awj-Pu-ngp"/>
                             <constraint firstItem="pts-4d-2Ez" firstAttribute="centerX" secondItem="i36-Gn-2cd" secondAttribute="centerX" id="bdn-lt-kgq"/>
                             <constraint firstItem="8oD-Gv-w3I" firstAttribute="top" secondItem="UWw-4r-Wep" secondAttribute="top" id="hpV-cj-Ad7"/>
                             <constraint firstItem="i36-Gn-2cd" firstAttribute="trailing" secondItem="pts-4d-2Ez" secondAttribute="trailing" constant="16" id="xMG-MX-DxR"/>
@@ -101,7 +101,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <color key="backgroundColor" red="0.0" green="0.47450980390000003" blue="0.41960784309999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="barTintColor" red="0.55294117649999996" green="0.43137254899999999" blue="0.38823529410000002" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                <color key="barTintColor" red="0.25098234415054321" green="0.25097692012786865" blue="0.25098058581352234" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <textAttributes key="titleTextAttributes">
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                     <color key="textColor" red="0.0" green="0.29803921570000003" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -258,7 +258,7 @@
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <color key="backgroundColor" red="0.0" green="0.47450980390000003" blue="0.41960784309999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="barTintColor" red="0.55294117649999996" green="0.43137254899999999" blue="0.38823529410000002" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
+                                <color key="barTintColor" red="0.25098234415054321" green="0.25097692012786865" blue="0.25098058581352234" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <textAttributes key="titleTextAttributes">
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                     <color key="textColor" red="0.0" green="0.29803921570000003" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
